# WEB_HW10

./: mongo_postgress_datatransfer.py  pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/mysite/admin/: base_site.html
mysite/mysite/static/: staticfiles.json
mysite/polls/: forms.py  models.py  signals.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_author_quote_delete_choice_delete_question.py  0003_alter_author_born_date_alter_author_born_location_and_more.py
mysite/polls/templates/polls/: author_detail.html  custom_login.html  password_reset_email.html  quotes.html  quotes_by_tag.html  register.html
