[tool.poetry]
name = "web_hw10"
version = "0.1.0"
description = ""
authors = ["MicMaus <michael.yasynskyi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
